# vella-flows

canvas/: README.md  index.html  package-lock.json  package.json
canvas/src/: App.jsx  index.css
canvas/src/components/: GenericNode.tsx
canvas/src/nodes/sendmessages/: index.tsx  schema.ts
engine/: README.md  pyproject.toml
engine/app/: main.py  webhook.py
